# operationbot

./: .copier-answers.yml  .cruft.json  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.release  Makefile  README.md  addrole.py  commandListener.py  config.py  config.py.example  container.py  converters.py  createEvent.py  errors.py  event.py  eventDatabase.json  eventDatabase.py  eventListener.py  events.db  ical_export.py  main.py  messageFunctions.py  operationbot.py  pyproject.toml  release.Dockerfile  reload.py  requirements.txt  role.py  roleGroup.py  secret.py  secret.py.example  test_argdate.py  test_discord.py  test_event.py
.github/linters/: .flake8  .markdown-lint.yml  .yaml-lint.yml
.github/workflows/: docker.yaml  lint.yaml  pre-commit.yml  pytest.yaml  superlinter.yml
cogs/: repl.py
docs/source/: architecture.md  changelog.md  conf.py  index.md  index.rst
scripts/: backup-events.sh  check-duplicates.sh
src/operationbot/: __init__.py  additional_role_group.py  bot.py  cli.py  commandListener.py  command_helpers.py  config.py  converters.py  errors.py  event.py  eventDatabase.py  eventListener.py  main.py  messageFunctions.py  reload.py  role.py  roleGroup.py  tasks.py
src/operationbot/cogs/: repl.py
tests/: __init__.py  test_database.py  test_event.py  test_operationbot.py
